--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
 		"eslint-plugin-nuxt": "^1.0.0",
 		"eslint-plugin-prettier": "^3.1.4",
 		"eslint-plugin-vue": "^6.2.2",
-		"prettier": "^2.1.2"
+		"node-sass": "^5.0.0",
+		"prettier": "^2.1.2",
+		"sass-loader": "^10.1.1"
 	}
 }
