--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 	"dependencies": {
 		"@nuxtjs/axios": "^5.12.2",
 		"core-js": "^3.6.5",
-		"nuxt": "^2.14.6"
+		"nuxt": "^2.14.6",
+		"nuxt-svg-sprite-module": "^1.0.7"
 	},
 	"devDependencies": {
 		"@nuxtjs/eslint-config": "^3.1.0",
